ajustes no conteúdo da página

--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
       @media screen and (max-width: 767px) {
         .services {
           flex-direction: column-reverse;
+          justify-content: center;
         }
       }
 
@@ -347,7 +348,6 @@
           <li><h4>Aferição de Pressão.</h4></li>
           <li><h4>Testes (glicemia, covid, colesterol).</h4></li>
           <li><h4>Venda de genéricos e similares.</h4></li>
-          <li><h4>Venda de cos e similares.</h4></li>
         </ul>
       </div>
       <div class="icon">
