Atualização de imagem

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       }
 
       .textContent > .image > img {
-        border-radius: 130px;
+        border-radius: 120px;
         width: 400px;
       }
 
@@ -279,7 +279,7 @@
         </ul>
       </div>
       <div class="image">
-        <img src="./images/farmaceutico.png" alt="farmaceutico" />
+        <img src="./images/farmaceutica.png" alt="farmaceutico" title="Nayara Silvestre "/>
       </div>
     </div>
     <div class="bg">
