Alteração de imagens

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           flex-direction: column-reverse;
         }
         .textContent > .image > img {
-          border-radius: 10px;
+          border-radius: 70px;
           width: 200px;
         }
       }
@@ -267,7 +267,7 @@
         <ul>
           <li>
             <h4>
-              Te oferecemos uma ampla gama de medicamentos de alta qualidade.
+              Te oferecemos uma variedade de medicamentos de alta qualidade.
             </h4>
           </li>
           <li>
